--- a/Optuna_Optimization.ipynb
+++ b/Optuna_Optimization.ipynb
@@ -1,64 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "pip install optuna"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QELiP01Iwvi9",
-        "outputId": "663ec9f3-3fbb-4d9a-f494-2a3e5fac1717"
-      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting optuna\n",
-            "  Downloading optuna-4.5.0-py3-none-any.whl.metadata (17 kB)\n",
-            "Requirement already satisfied: alembic>=1.5.0 in /usr/local/lib/python3.12/dist-packages (from optuna) (1.17.0)\n",
-            "Collecting colorlog (from optuna)\n",
-            "  Downloading colorlog-6.10.1-py3-none-any.whl.metadata (11 kB)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from optuna) (2.0.2)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.12/dist-packages (from optuna) (25.0)\n",
-            "Requirement already satisfied: sqlalchemy>=1.4.2 in /usr/local/lib/python3.12/dist-packages (from optuna) (2.0.44)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from optuna) (4.67.1)\n",
-            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.12/dist-packages (from optuna) (6.0.3)\n",
-            "Requirement already satisfied: Mako in /usr/local/lib/python3.12/dist-packages (from alembic>=1.5.0->optuna) (1.3.10)\n",
-            "Requirement already satisfied: typing-extensions>=4.12 in /usr/local/lib/python3.12/dist-packages (from alembic>=1.5.0->optuna) (4.15.0)\n",
-            "Requirement already satisfied: greenlet>=1 in /usr/local/lib/python3.12/dist-packages (from sqlalchemy>=1.4.2->optuna) (3.2.4)\n",
-            "Requirement already satisfied: MarkupSafe>=0.9.2 in /usr/local/lib/python3.12/dist-packages (from Mako->alembic>=1.5.0->optuna) (3.0.3)\n",
-            "Downloading optuna-4.5.0-py3-none-any.whl (400 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m400.9/400.9 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading colorlog-6.10.1-py3-none-any.whl (11 kB)\n",
-            "Installing collected packages: colorlog, optuna\n",
-            "Successfully installed colorlog-6.10.1 optuna-4.5.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
+      "metadata": {
+        "id": "l1ZiPyU8wtrF"
+      },
+      "outputs": [],
       "source": [
         "import optuna\n",
         "import torch\n",
@@ -68,15 +16,15 @@
         "from torch.utils.data import DataLoader\n",
         "from torchvision import datasets, transforms\n",
         "import numpy as np"
-      ],
-      "metadata": {
-        "id": "l1ZiPyU8wtrF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "O7dDiNkuw38I"
+      },
+      "outputs": [],
       "source": [
         "class FlexibleConvNet(nn.Module):\n",
         "    def __init__(self, num_conv_layers=1, num_fc_layers=1, out_channels=16,\n",
@@ -146,15 +94,15 @@
         "                x = self.dropout(x)\n",
         "\n",
         "        return x"
-      ],
-      "metadata": {
-        "id": "O7dDiNkuw38I"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-YdBJAY6zza5"
+      },
+      "outputs": [],
       "source": [
         "def get_data_transforms(trial=None):\n",
         "    \"\"\"\n",
@@ -342,12 +290,7 @@
         "    print(f\"Trial {trial.number + 1} Final Accuracy: {accuracy:.4f}\\n\")\n",
         "\n",
         "    return accuracy"
-      ],
-      "metadata": {
-        "id": "-YdBJAY6zza5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -362,15 +305,15 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "[I 2025-10-31 21:05:14,566] A new study created in memory with name: no-name-cdcdadf0-247a-4cfe-8d79-84b89a4e3d84\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "============================================================\n",
@@ -414,15 +357,15 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "[I 2025-10-31 21:09:04,881] Trial 0 finished with value: 0.9903 and parameters: {'learning_rate': 0.00034913622846060243, 'num_conv_layers': 6, 'num_fc_layers': 4, 'kernel_size': 5, 'dilation': 2, 'dropout_rate': 0.04365708427586706, 'use_pooling': False, 'use_rotation': False, 'use_translation': True, 'translate_factor': 0.06912277281915277, 'use_scale': True, 'scale_range': 0.07285182857724358}. Best is trial 0 with value: 0.9903.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Trial 0 - Epoch 10/10: Loss=0.0515, Val Acc=0.9903\n",
             "Trial 1 Final Accuracy: 0.9903\n",
@@ -453,15 +396,15 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "[I 2025-10-31 21:13:10,630] Trial 1 finished with value: 0.9832 and parameters: {'learning_rate': 0.00028531498008373005, 'num_conv_layers': 5, 'num_fc_layers': 5, 'kernel_size': 3, 'dilation': 1, 'dropout_rate': 0.08679901120327504, 'use_pooling': True, 'pooling_kernel_size': 4, 'use_rotation': True, 'rotation_degrees': 15, 'use_translation': True, 'translate_factor': 0.07114868936708249, 'use_scale': True, 'scale_range': 0.07611444402625725}. Best is trial 0 with value: 0.9903.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Trial 1 - Epoch 10/10: Loss=0.1225, Val Acc=0.9832\n",
             "Trial 2 Final Accuracy: 0.9832\n",
@@ -492,15 +435,15 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "[I 2025-10-31 21:16:21,398] Trial 2 finished with value: 0.9925 and parameters: {'learning_rate': 0.0008981209753149214, 'num_conv_layers': 4, 'num_fc_layers': 3, 'kernel_size': 7, 'dilation': 1, 'dropout_rate': 0.08426265194651103, 'use_pooling': False, 'use_rotation': False, 'use_translation': True, 'translate_factor': 0.1415892468896479, 'use_scale': False}. Best is trial 2 with value: 0.9925.\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Trial 2 - Epoch 10/10: Loss=0.0444, Val Acc=0.9925\n",
             "Trial 3 Final Accuracy: 0.9925\n",
@@ -524,15 +467,15 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "[I 2025-10-31 21:17:13,338] Trial 3 pruned. \n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Trial 3 - Epoch 3/10: Loss=0.1282, Val Acc=0.9751\n",
             "\n",
@@ -554,15 +497,15 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "[I 2025-10-31 21:18:29,889] Trial 4 pruned. \n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Trial 4 - Epoch 3/10: Loss=0.4138, Val Acc=0.9414\n",
             "\n",
@@ -597,7 +540,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/html": [
               "<html>\n",
@@ -633,10 +575,10 @@
               "</html>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/html": [
               "<html>\n",
@@ -672,7 +614,8 @@
               "</html>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -752,5 +695,21 @@
         "    study = main()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
